# auto_pm

./: .coverage  .gitignore  CLAUDE.md  README.md  alembic.ini  create_demo_data.py  main.py  pyproject.toml  reset.py  start_web.sh
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.claude/: settings.local.json
.ralph-tui/: progress.md  session-meta.json  session.json
.ralph-tui/reports/: sequential-summary-1061fc8e-d656-416d-bfd0-ca8e076d2be1-2026-03-20T08-40-34-868Z.txt  sequential-summary-354abaac-84ea-4ab1-bca8-559f39f8c05c-2026-04-06T14-14-19-251Z.txt  sequential-summary-b33050d5-c5ec-4a7d-80b0-5e5923d5377f-2026-03-19T10-17-23-539Z.txt  sequential-summary-f9b2d58f-a361-4f6b-ba35-9c71e6294159-2026-03-19T12-55-41-581Z.txt
alembic/: env.py
alembic/versions/: ade4f3a0f709_initial_schema.py  ce7bed265769_add_is_read_column_to_messages.py
docs/: backlog.json
docs/plans/: cozy-prancing-music.md  epic-10-chat-interface.md  epic-11-web-agent-trigger.md  epic-12-visual-reports.md  epic-13-inbox-composer.md  epic-14-email-client-ui.md  epic-8-multi-project.md  epic-9-actionable-emails.md
experimentation/: langgraph_example.py
project_manager_agent/: models.py  project_manager.py  repositories.py
project_manager_agent/project_manager/: agent.py  prompt.py  tools.py
project_manager_agent/reporter/: agent.py  context.py  prompt.py
src/project_manager_agent/: cli.py
src/project_manager_agent/agents/project_manager/: agent.py  prompt.py  tools.py
src/project_manager_agent/agents/reporter/: agent.py  context.py  schema.py  weekly.py
src/project_manager_agent/core/: config.py  date_utils.py  models.py  protocols.py  repositories.py  services.py
src/project_manager_agent/web/: app.py
tests/: test_repositories.py  test_services.py  test_smoke.py  test_web.py
(+28 files in other folders)
